<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="vertical">

            <LinearLayout
                android:gravity="center"
                android:background="#274c77"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:padding="4dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <ImageView
                        android:layout_marginStart="3dp"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/shop_minimalistic"
                        app:tint="@color/white"
                        android:contentDescription="@string/logo" />

                    <TextView
                        android:layout_marginStart="10dp"
                        android:id="@+id/back_text"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pos"
                        android:textColor="@color/white"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_marginEnd="5dp"
                    android:gravity="end"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_marginEnd="10dp"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tax"
                        android:textColor="@color/white"/>

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/taxSwitch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/inclusive"
                        android:textColor="@color/white"
                        android:checked="true"
                        android:textSize="18sp"/>


                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:padding="4dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_marginTop="3dp"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/all_products"
                        android:textColor="#1f181a"/>

                </LinearLayout>

                <LinearLayout
                    android:gravity="end"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/add_product"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/baseline_add_24"
                        android:drawablePadding="4dp"
                        android:drawableTint="@color/white"
                        android:onClick="addNewProduct"
                        android:text="@string/new_product" />


                    <Button
                        android:id="@+id/report"
                        android:layout_marginStart="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/baseline_query_stats_24"
                        android:drawablePadding="4dp"
                        android:drawableTint="@color/white"
                        android:onClick="reports"
                        android:text="@string/report" />


                </LinearLayout>
            </LinearLayout>

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.7"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/recycler_view"
                    android:nestedScrollingEnabled="false"
                    tools:listitem="@layout/product_item"/>


            </LinearLayout>

            <LinearLayout
                android:padding="16dp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:orientation="vertical"
                android:background="@drawable/rounded_background"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="Product Name"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Price"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Quantity"
                        android:textStyle="bold" />
                </LinearLayout>


                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.7"
                    android:id="@+id/recycler_view_cart"
                    android:nestedScrollingEnabled="false"
                    tools:listitem="@layout/cart_item"/>

                <LinearLayout
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.3"
                    android:orientation="vertical">


                    <LinearLayout
                        android:paddingHorizontal="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_marginTop="3dp"
                            android:textStyle="bold"
                            android:textSize="16sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sub_total"
                            android:textColor="#1f181a"/>

                        <TextView
                            android:id="@+id/subtotal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="end"
                            android:textStyle="bold"
                            android:textSize="16sp"
                            android:text="@string/_0_0"/>
                    </LinearLayout>

                    <LinearLayout
                        android:paddingHorizontal="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_marginTop="3dp"
                            android:textStyle="bold"
                            android:textSize="16sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/total_qty"
                            android:textColor="#1f181a"/>

                        <TextView
                            android:id="@+id/total_qty"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="end"
                            android:textStyle="bold"
                            android:textSize="16sp"
                            android:text="@string/_0_0"/>
                    </LinearLayout>

                    <LinearLayout
                        android:paddingHorizontal="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_marginTop="3dp"
                            android:textStyle="bold"
                            android:textSize="16sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tax"
                            android:textColor="#1f181a"/>

                        <TextView
                            android:id="@+id/tax"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="end"
                            android:textStyle="bold"
                            android:textSize="16sp"
                            android:text="@string/_0_0"/>
                    </LinearLayout>

                    <LinearLayout
                        android:paddingHorizontal="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_marginTop="3dp"
                            android:textStyle="bold"
                            android:textSize="16sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/discount"
                            android:textColor="#1f181a"/>

                        <TextView
                            android:id="@+id/discount"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="end"
                            android:textStyle="bold"
                            android:textSize="16sp"
                            android:text="@string/_0_0"/>
                    </LinearLayout>

                    <LinearLayout
                        android:paddingHorizontal="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_marginTop="3dp"
                            android:textStyle="bold"
                            android:textSize="16sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/total"
                            android:textColor="#1f181a"/>

                        <TextView
                            android:id="@+id/total"
                            android:layout_width="match_parent"
                            android:layout_height="33dp"
                            android:gravity="end"
                            android:textStyle="bold"
                            android:textSize="16sp"
                            android:text="@string/_0_0"
                            android:textColor="@color/black" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/clear"
                            android:onClick="clearCart" />

                        <Button
                            android:layout_marginStart="16dp"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:onClick="payment"
                            android:text="@string/payment" />

                    </LinearLayout>








                </LinearLayout>


            </LinearLayout>
        </LinearLayout>




    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>