<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:id="@+id/product_cart"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginStart="8dp"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="#1f181a"
                android:text="@string/invoice_id"/>

            <TextView
                android:id="@+id/invoice_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:textStyle="bold"
                android:textColor="#1f181a"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/invoice_total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

        </LinearLayout>

        <View
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#c0c0c0"/>


        <LinearLayout
            android:id="@+id/details_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp">

            <TextView
                android:layout_marginTop="3dp"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="product name"
                android:textColor="#1f181a"/>

            <TextView
                android:layout_marginTop="3dp"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="100dp"
                android:gravity="end"
                android:text="QTY"
                android:textColor="#1f181a"/>

            <TextView
                android:layout_marginTop="3dp"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="100dp"
                android:gravity="end"
                android:text="price"
                android:textColor="#1f181a"/>

            <TextView
                android:layout_marginTop="3dp"
                android:textStyle="bold"
                android:textSize="16sp"
                android:gravity="end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/discount"
                android:textColor="#1f181a"/>


        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.cardview.widget.CardView>